apps/vpn-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-gateway
  labels:
    name: vpn-gateway
